# rust-ride

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: .gitkeep  default_config.toml
assets/worlds/: coastal.json  countryside.json  mountains.json
docs/specs/: PRD rustride.md  new_features.md
specs/001-indoor-cycling-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-indoor-cycling-app/checklists/: requirements.md
specs/001-indoor-cycling-app/contracts/: metrics-calculator.md  ride-recorder.md  sensor-manager.md  workout-engine.md
specs/002-3d-world-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-3d-world-features/checklists/: requirements.md
specs/002-3d-world-features/contracts/: ride-persistence.md  sensor-control.md  settings.md  workout-library.md  world-3d.md
specs/003-training-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-training-analytics/checklists/: requirements.md
specs/003-training-analytics/contracts/: analytics-api.md  storage-api.md
specs/004-ai-ml-coaching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-ml-coaching/checklists/: requirements.md
specs/004-ai-ml-coaching/contracts/: cloud-api.md  local-api.md
specs/005-3d-world-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-3d-world-content/checklists/: requirements.md
specs/005-3d-world-content/contracts/: achievements.md  npc-system.md  procedural-generation.md  route-import.md  segment-leaderboard.md  weather-system.md
specs/006-social-multiplayer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-social-multiplayer/checklists/: requirements.md
specs/006-social-multiplayer/contracts/: leaderboards.md  networking.md  racing.md  social.md  workouts.md
specs/007-hardware-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-hardware-integration/checklists/: requirements.md
specs/007-hardware-integration/contracts/: audio.md  hid.md  integrations.md  sensors.md  video.md
specs/008-ux-accessibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-ux-accessibility/checklists/: requirements.md
specs/008-ux-accessibility/contracts/: accessibility.rs  audio.rs  display_modes.rs  i18n.rs  layout.rs  mod.rs  onboarding.rs
src/: app.rs  lib.rs  main.rs
src/accessibility/: colorblind.rs  focus.rs  high_contrast.rs  mod.rs  screen_reader.rs  voice_control.rs
src/audio/: alerts.rs  cues.rs  engine.rs  mod.rs  tones.rs  tts.rs
src/goals/: manager.rs  mod.rs  types.rs
src/hid/: actions.rs  device.rs  mapping.rs  mod.rs
src/i18n/: loader.rs  mod.rs
src/input/: gestures.rs  keyboard.rs  mod.rs  touch.rs
src/integrations/: mod.rs
src/integrations/mqtt/: client.rs  fan.rs  mod.rs
src/integrations/streaming/: mod.rs  pin.rs  server.rs
src/integrations/sync/: garmin.rs  mod.rs  oauth.rs  strava.rs
src/integrations/weather/: mod.rs  provider.rs
src/leaderboards/: efforts.rs  export.rs  mod.rs  rankings.rs  segments.rs
src/metrics/: calculator.rs  mod.rs  smoothing.rs  zones.rs
src/metrics/analytics/: critical_power.rs  error.rs  ftp_detection.rs  mod.rs  pdc.rs  rider_type.rs  sweet_spot.rs  training_load.rs  triggers.rs  vo2max.rs
src/ml/: adaptation.rs  cache.rs  cadence_analysis.rs  client.rs  difficulty.rs  fatigue_detection.rs  ftp_prediction.rs  mod.rs  performance_forecast.rs  types.rs  workout_recommend.rs
src/networking/: chat.rs  discovery.rs  mod.rs  protocol.rs  session.rs  sync.rs
src/onboarding/: glossary.rs  mod.rs  steps.rs
src/racing/: countdown.rs  events.rs  mod.rs  results.rs
src/recording/: exporter_csv.rs  exporter_fit.rs  exporter_tcx.rs  mod.rs  recorder.rs  types.rs
src/sensors/: dynamics.rs  ftms.rs  fusion.rs  imu.rs  incline.rs  manager.rs  mod.rs  smo2.rs  types.rs
src/sensors/ant/: channels.rs  dongle.rs  duplex.rs  mod.rs
src/social/: badges.rs  challenges.rs  clubs.rs  feed.rs  mod.rs  profile.rs  types.rs
src/storage/: analytics_store.rs  config.rs  database.rs  hardware_store.rs  ml_store.rs  mod.rs  schema.rs  social_store.rs
src/ui/: mod.rs  theme.rs
src/ui/display_modes/: flow_mode.rs  mod.rs  tv_mode.rs
src/ui/layout/: editor.rs  mod.rs  profiles.rs
src/ui/screens/: activity_feed.rs  analytics.rs  avatar.rs  challenges.rs  clubs.rs  group_ride.rs  home.rs  leaderboard.rs  mod.rs  onboarding.rs  race_lobby.rs  ride.rs  ride_detail.rs  ride_history.rs  ride_summary.rs  rider_profile.rs  route_browser.rs  route_import.rs  sensor_setup.rs  settings.rs  streaming.rs  workout_library.rs  world_select.rs
src/ui/widgets/: accessible_button.rs  chat_panel.rs  dynamics_display.rs  ftp_notification.rs  metric_display.rs  mod.rs  participant_list.rs  pdc_chart.rs  sensor_status.rs  shortcut_overlay.rs  smo2_display.rs  tilt_indicator.rs  voice_indicator.rs  weather_widget.rs  (+1 more)
src/video/: mod.rs  player.rs  sync.rs
src/workouts/: engine.rs  library.rs  mod.rs  parser_mrc.rs  parser_zwo.rs  types.rs
src/world/: avatar.rs  camera.rs  hud.rs  mod.rs  physics.rs  renderer.rs  route.rs  scene.rs  terrain.rs
tests/: integration_tests.rs
tests/integration/: analytics_integration_test.rs  hid_test.rs  mod.rs  mqtt_fan_test.rs  npc_test.rs  ride_recording_test.rs  route_import_test.rs  segment_test.rs  sensor_mock.rs  streaming_test.rs  weather_test.rs  workout_execution_test.rs
tests/unit/: ant_profiles_test.rs  audio_test.rs  dynamics_test.rs  elevation_test.rs  ftms_parser_test.rs  fusion_test.rs  import_fit_test.rs  import_gpx_test.rs  import_tcx_test.rs  leaderboard_test.rs  mod.rs  npc_ai_test.rs  npc_spawner_test.rs  ride_history_test.rs  ride_summary_test.rs  segment_timing_test.rs  sensor_discovery_test.rs  skybox_test.rs  tcx_export_test.rs  weather_test.rs  workout_engine_test.rs  workout_parser_test.rs  zones_test.rs
(+53 files in other folders)
