[package]
name = "rustride"
version = "0.2.0"
edition = "2021"
description = "Open-source, self-hosted indoor cycling training application"
authors = ["Providence IT"]
license = "MIT"
repository = "https://github.com/ProvidenceIT/rust-ride"
keywords = ["cycling", "trainer", "fitness", "bluetooth", "ble"]
categories = ["games"]

[dependencies]
# GUI Framework
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_plot = "0.34"
wgpu = "0.20"

# BLE Communication
btleplug = { version = "0.11", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Configuration
toml = "0.8"
directories = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking (Social & Multiplayer)
mdns-sd = "0.13"

# ANT+ Protocol Support (Hardware Integration)
# Note: ant-rs may require libusb system library
# libusb-sys = "0.2"

# Audio & TTS (Hardware Integration)
tts = "0.26"
rodio = { version = "0.17", default-features = false, features = ["wav", "mp3"] }

# MQTT for Smart Fan Control (Hardware Integration)
rumqttc = "0.24"

# WebSocket for External Display Streaming (Hardware Integration)
tokio-tungstenite = "0.21"
qrcode = "0.13"

# USB HID for Stream Deck / Buttons (Hardware Integration)
hidapi = "2.4"

# OAuth2 for Fitness Platform Sync (Hardware Integration)
oauth2 = "4.4"
keyring = "2.0"

# Video Playback (Hardware Integration - optional)
# ffmpeg-next = { version = "6.0", optional = true }

# XML Parsing (for .zwo workouts and TCX export)
quick-xml = { version = "0.31", features = ["serialize"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Channels
crossbeam = "0.8"

# HTTP Client (for ML cloud API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# 3D Rendering & Math
glam = { version = "0.27", features = ["serde"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Model & Texture Loading
gltf = "1.4"
image = { version = "0.25", default-features = false, features = ["png"] }

# Native File Dialogs
rfd = "0.14"

# GPS File Parsing
gpx = "0.9"
fitparser = "0.5"

# Procedural Generation
noise = "0.8"

# Internationalization (UX & Accessibility Feature)
fluent = "0.16"
fluent-langneg = "0.14"
unic-langid = "0.9"
sys-locale = "0.3"

# System Theme Detection (UX & Accessibility Feature)
dark-light = "1.1"

# Voice Recognition (UX & Accessibility Feature - optional)
vosk = { version = "0.3", optional = true }

# Platform-specific disk space checking
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
video = []  # Enable video sync (requires FFmpeg)
healthkit = []  # Enable Apple HealthKit (macOS only)
voice-control = ["vosk"]  # Enable voice control (requires Vosk model)

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "rustride"
path = "src/main.rs"

[lib]
name = "rustride"
path = "src/lib.rs"
